--- a/info-page.html
+++ b/info-page.html
@@ -131,6 +131,7 @@
                                 <li>Кофемашина, чайник</li>
                                 <li>Посудомоечная машина</li>
                                 <li>Телевизор</li>
+                                <li>Телевизор</li>
                             </ul>
                             <button class="details__toggler toggler" target="features">
                                 <div class="disactive">
