--- a/orfering.html
+++ b/orfering.html
@@ -129,33 +129,33 @@
                         <div class="ordering__section">
                             <h3>Способ оплаты</h3>
                             <div class="person__data">
-                                <div class="ordering__field--radio">
+                                <label class="ordering__field--radio">
                                     <p class="field__main">
                                         По карте
                                     </p>
-                                    <label class="ordering__radio">
+                                    <div class="ordering__radio">
                                         <input type="radio" name="payment">
                                         <span class="ordering__mark"></span>
-                                    </label>
-                                </div>
-                                <div class="ordering__field--radio">
+                                    </div>
+                                </label>
+                                <label class="ordering__field--radio">
                                     <p class="field__main">
                                         Наличными
                                     </p>
-                                    <label class="ordering__radio">
+                                    <div class="ordering__radio">
                                         <input type="radio" name="payment">
                                         <span class="ordering__mark"></span>
-                                    </label>
-                                </div>
-                                <div class="ordering__field--radio">
+                                    </div>
+                                </label>
+                                <label class="ordering__field--radio">
                                     <p class="field__main">
                                         Безналичный перевод (по счету)
                                     </p>
-                                    <label class="ordering__radio">
+                                    <div class="ordering__radio">
                                         <input type="radio" name="payment">
                                         <span class="ordering__mark"></span>
-                                    </label>
-                                </div>
+                                    </div>
+                                </label>
                             </div>
                         </div>
                     </div>
