--- a/index.html
+++ b/index.html
@@ -19,7 +19,25 @@
                 <a href="./index.html">
                     <img src="./media/logo.svg" alt="logo">
                 </a>
-                <p>sds</p>
+                <nav class="header__navbar large" id="navbar">
+                    <ul class="header__navlist">
+                        <li class="header__navitem">
+                            <a href="#appart">
+                                апартаменты 
+                            </a>
+                        </li>
+                        <li class="header__navitem">
+                            <a href="#contacts">
+                                контакты
+                            </a>
+                        </li>
+                        <li class="header__navitem">
+                            <a href="#">
+                                +7 (978) 765-58-11
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
                 <div class="small">
                     <div class="header__toggler toggler" target="navbar">
                         <div class="active">
