--- a/index.html
+++ b/index.html
@@ -19,25 +19,7 @@
                 <a href="./index.html">
                     <img src="./media/logo.svg" alt="logo">
                 </a>
-                <nav class="header__navbar large" id="navbar">
-                    <ul class="header__navlist">
-                        <li class="header__navitem">
-                            <a href="#appart">
-                                апартаменты 
-                            </a>
-                        </li>
-                        <li class="header__navitem">
-                            <a href="#contacts">
-                                контакты
-                            </a>
-                        </li>
-                        <li class="header__navitem">
-                            <a href="#">
-                                +7 (978) 765-58-11
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus nemo delectus suscipit distinctio repudiandae dolores odit eos enim, accusamus ratione, labore numquam asperiores incidunt, quo quia corporis qui est magnam.</p>
                 <div class="small">
                     <div class="header__toggler toggler" target="navbar">
                         <div class="active">
@@ -57,7 +39,8 @@
         <section class="search" id="appart">
             <div class="container">
                 <h1 class="search__title">
-                    Аренда <i>Апартаментов</i> в севастополе
+                    Аренда <i>Апартаментов</i>
+                     в севастополе
                 </h1>
                 <form class="search__form">
                     <div class="search__fields">
