--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
                 <a href="./index.html">
                     <img src="./media/logo.svg" alt="logo">
                 </a>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus nemo delectus suscipit distinctio repudiandae dolores odit eos enim, accusamus ratione, labore numquam asperiores incidunt, quo quia corporis qui est magnam.</p>
+                <nav class="header__navbar large" id="navbar">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa accusantium maxime provident debitis asperiores aliquam nostrum commodi? Nobis voluptatem, asperiores in voluptate distinctio voluptates, hic officia fuga ipsam ducimus dolor?
+                </nav>
                 <div class="small">
                     <div class="header__toggler toggler" target="navbar">
                         <div class="active">
