--- a/index.html
+++ b/index.html
@@ -20,7 +20,23 @@
                     <img src="./media/logo.svg" alt="logo">
                 </a>
                 <nav class="header__navbar large" id="navbar">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa accusantium maxime provident debitis asperiores aliquam nostrum commodi? Nobis voluptatem, asperiores in voluptate distinctio voluptates, hic officia fuga ipsam ducimus dolor?
+                    <ul class="header__navlist">
+                        <li class="header__navitem">
+                            <a href="#appart">
+                                апартаменты 
+                            </a>
+                        </li>
+                        <li class="header__navitem">
+                            <a href="#contacts">
+                                контакты
+                            </a>
+                        </li>
+                        <li class="header__navitem">
+                            <a href="#">
+                                +7 (978) 765-58-11
+                            </a>
+                        </li>
+                    </ul>
                 </nav>
                 <div class="small">
                     <div class="header__toggler toggler" target="navbar">
