--- a/info-page.html
+++ b/info-page.html
@@ -679,8 +679,9 @@
                         г. Севастополь, ул. Пушкина
                     </p>
                     <div class="preview__cart">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253363.1652546415!2d33.3446402819176!3d44.61725877655596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x409525ef659144f5%3A0xbd2da7afff4d34cc!2z0KHQtdCy0LDRgdGC0L7Qv9C-0LvRjA!5e0!3m2!1suk!2sua!4v1656343308301!5m2!1suk!2sua" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                
+                        <div class="cart">
+                            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A5cc6bec7d83edbee07a1ef610ff2a0c47930d35b7c82fa571cd988fe40474805&amp;width=100%&amp;height=100%&amp;lang=ru_RU&amp;scroll=true"></script>
+                        </div>
                     </div>
                 </div>
             </div>
